# cucumber_project

./: Dockerfile  Dockerfile_behave  Dockerfile_pytest  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
database/: 01-init-db.sql  02-load-data.sql  postgres.dockerfile
features/: get_order.feature
features/steps/: get_order_steps.py
github/workflow/: python-app.yaml
src/: app.py  main.py  orders.py  products.py
src/dependencies/: database.py
src/models/: orders.py
src/routers/: orders.py
tests/: test_orders.py
